--- a/src/scss/base/default.scss
+++ b/src/scss/base/default.scss
@@ -45,7 +45,7 @@ body {
 }
 
 .intro-body::-webkit-scrollbar-thumb {
-  background: #333333;
+  background: #E5E5E5;
   border-radius: 4px;
   width: 8px;
 }
