--- a/src/scss/section/intro-section.scss
+++ b/src/scss/section/intro-section.scss
@@ -35,6 +35,14 @@
     flex-direction: column;
     align-items: center;
     height: 100%;
+    border: 1px solid transparent;
+    transition: $base-transition;
+    cursor: pointer;
+
+    &:hover {
+      border: 1px solid #7b002c;
+      box-shadow: 0px 12px 12px rgba(0, 0, 0, 0.12);
+    }
   }
 
   &__title {
@@ -96,19 +104,41 @@
 }
 
 .intro-head {
-  padding-right: 5rem;
+  padding-right: 4rem;
 }
 .intro-list {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  border-bottom: 2px solid #333333;
+  border-bottom: 1px solid #333333;
   border-radius: 2px;
   margin-bottom: 3rem;
-  padding-bottom: 3rem;
+  padding-bottom: 1.2rem;
 
   .primary {
     margin-right: 1.6rem;
     margin-bottom: 1.6rem;
+  }
+
+  input {
+    width: 0;
+    height: 0;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+  }
+
+  input[type='checkbox']:checked + label {
+    .primary {
+      background: #fffacf;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+      border: 1px solid #f8eb77;
+    }
+  }
+  label {
+    position: relative;
+    cursor: pointer;
   }
 }
