--- a/src/scss/components/tabs.scss
+++ b/src/scss/components/tabs.scss
@@ -4,35 +4,30 @@
   }
 
   &__btn {
-    color: #000;
-    padding: 4px;
-    border: 1px solid #ccc;
-    border-bottom: none;
     transition: $base-transition;
-    font-size: 20px;
     cursor: pointer;
 
-    &:hover {
-      background-color: #ccc;
-    }
+    
 
     & + & {
       margin-left: 10px;
     }
 
     &.active {
-      background-color: #ccc;
+        background: #fffacf;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+        border: 1px solid #f8eb77;
     }
   }
 
   &__content {
     display: none;
-    padding: 16px;
-    border: 1px solid #ccc;
-    font-size: 16px;
+
 
     &.active {
-      display: block;
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0 -1.5rem -3rem;
     }
   }
 }
